feat: add entity ab, migration, endpoints, factory, tests
Добавил функционал объявлений.
