# routes/api.php
@@ -12,9 +12,8 @@ Route::get('/user', function (Request $request) {
 Route::prefix('/v1')->group(function () {
     Route::post('/register', [AuthController::class, 'register'])->name('register');
     Route::post('/login', [AuthController::class, 'login'])->name('login');
-});
 
-
-Route::middleware('auth:sanctum')->name('api.v1.')->group(function () {
-    Route::apiResource('abs', AbController::class);
+    Route::middleware('auth:sanctum')->name('api.v1.')->group(function () {
+        Route::apiResource('abs', AbController::class);
+    });
 });
